# DW_milkSite

./: .env.example  .gitignore  manage.py  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_card_include.html  post_detail.html  posts_list.html
core/: admin.py  apps.py  data.py  forms.py  mistral.py  models.py  signals.py  telegram_bot.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_order_product_orderitem.py  0003_alter_product_options_order_delivery_day_and_more.py  0004_order_product_quantities_order_products_and_more.py  0005_remove_order_product_quantities_and_more.py  0006_remove_order_products_with_quantity_and_more.py
core/templates/core/: about_milk.html  delivery_payment.html  landing.html  order_detail.html  order_form.html  orders_list.html  product_detail.html  products.html  reviews.html  reviews_form.html  thanks.html
milksite/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
static/js/: order_form.js  reviews.js
templates/: 404.html  base.html
templates/includes/: nav_menu_include.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: account_base.html  account_menu_include.html  email_confirmation_signup.html  login.html  password_change.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_from_key.html  profile_detail.html  register.html  (+2 more)
(+2 files in other folders)
