[project]
name = "dw-milksite"
version = "0.1.0"
description = ""
authors = [
    {name = "Ekaterina",email = "katusha158@rambler.ru"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "mistralai (>=1.9.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-telegram-bot (>=22.3,<23.0)",
    "unidecode (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
